<resources>
    <string name="app_name">LibraryApp</string>

    //Dialog
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publication_year">Publication Year</string>
    <string name="description">Description</string>
    <string name="is_available">Is available</string>

    //Book detail
    <string name="label_author">Author:</string>
    <string name="label_year">Year:</string>
    <string name="label_description">Description:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    //Books list
    <string name="add_button_icon">Add button icon</string>
    <string name="no_books_available">No books available</string>

    //Availability chip
    <string name="chip_available">Availability status: Available</string>
    <string name="chip_checked_out">Availability status: Checked out</string>
</resources>